# posah

./: .bazelrc  .gitignore  ChangeLog.md  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-prunel  bazel-testlogs  package.yaml  posah.cabal  stack.yaml
app/: Main.hs
backend/: backend.cabal  bazel-backend  bazel-bin  bazel-out  bazel-testlogs
backend/app/: BUILD.bazel  Main.hs
backend/src/: BUILD.bazel
src/DB/: ConnectionInfo.hs  User.hs
src/Exception/: Handling.hs  Handling.lhs
src/Middleware/: Authentication.hs
src/Types/: User.hs
