load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
    "haskell_library",
    "haskell_binary",
    "haskell_toolchain_library",
)

load(
    "@rules_haskell//haskell:toolchain.bzl",
    "haskell_toolchain",
)

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_git_repository", "nixpkgs_package")

haskell_toolchain_library(name = "base")

#haskell_toolchain(
#    name = "ghc",
#    version = "8.2.2",
#    is_static = True,
#    libraries = list(),
#    tools = ["@sys_ghc//:bin"],
#    compiler_flags = ["-Wall"],
#)

#
#haskell_toolchain(
#  name = "ghc",
#  version = "8.6.5",
#  is_static = True,
## tools = ["@ghc//:bin"],
#  tools = [],
#  libraries = [],
#)
#

haskell_binary(
    name = "backend_main",
    srcs = ["Main.hs"],
#   prebuilt_dependencies = ["base"],
    deps = [
        ":base",
        #"//lib:lib",
    ],
)